--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        
   facebook:       
-  github:         https://github.com/galaux
-  linkedin:       http://www.linkedin.com/profile/view?id=4804653
+  github:         galaux
+  linkedin:       guillaumealaux
   instagram:      
   lastfm:         
   tumblr:         
@@ -35,11 +35,6 @@ links:
     url: /about/
   - title: Articles
     url: /articles/
-  - title: Theme Setup
-    url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
-    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Paris
