--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Alaux.net
 tagline:          A passionate's blog
-description:      Describe your website.
+description:      Blog posts about (Java/Scala) development, Arch Linux and possibly anything else
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://localhost:4000
 
