Fixed tagline of "about" page

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:              http://localhost:4000
 owner:
   name:           Guillaume ALAUX
   avatar:         bio-photo.png
-  bio:            "Merely just IT stuff…"
+  bio:            "An IT passionate"
   email:          guillaume.alaux.net
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:        
