--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Alaux.net
 tagline:          A passionate's blog
 description:      Blog posts about (Java/Scala) development, Arch Linux and possibly anything else
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://www.alaux.net
+url:              http://galaux.github.io
 
 # Owner/author information
 owner:
