Revert "Set "url" to galaux.github.io"
This reverts commit f46b25efb0e63a52874182d188186d9e08d67eb1.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Alaux.net
 tagline:          A passionate's blog
 description:      Blog posts about (Java/Scala) development, Arch Linux and possibly anything else
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://galaux.github.io
+url:              http://www.alaux.net
 
 # Owner/author information
 owner:
