--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ bing_verify:
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: About
-    url: /about/
+  - title: CV (En)
+    url: /cv/en/
   - title: Articles
     url: /articles/
 
